# Todo-list

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
app/: constants.py  routes.py  utils.py
app/templates/: add_new_task.html  index.html
tests/: conftest.py  test_routes.py
