[tool.poetry]
name = "Todo list"
version = "0.1.0"
description = ""
authors = ["Vasily Kovalev <poiut_2001@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.1.0"
unify = "^0.5"
flake8 = "^4.0.1"
pylint = "^2.12.2"
mypy = "^0.941"
pytest-deadfixtures = "^2.2.1"
requests = "^2.27.1"
types-requests = "^2.27.13"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
